<resources>
    <string name="app_name">세웃</string>
    <string name="title_home">홈</string>
    <string name="title_map">지도</string>
    <string name="title_group">그룹</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_dashboard">게시판</string>
    <string name="title_chat">채팅</string>
    <string name="title_profile">마이세웃</string>
    <string name="title_schedule">시간표</string>
    <string name="show">Show</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>

    <string-array name="my_header_title">
        <item />
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>
    <string name="write">글쓰기</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Messages Preferences -->
    <string name="CaringType_title">희망 돌봄 대상을 선택하세요.</string>
    <string name="caringType_defaultvalue">모두</string>
    <string name="Available_title">해당 시간대에 활용 가능한 것을 선택하세요.</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings_activitytest">SettingsActivitytest</string>

    <!-- Dashboard Strings -->
    <string name="base_url">https://49.50.173.180:8080/saeut/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
