<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/ic_saeut_logo"
    android:title="@string/title_home" />

  <item
    android:id="@+id/navigation_community"
    android:icon="@drawable/ic_chat"
    android:title="@string/title_community" />

  <item
    android:id="@+id/navigation_dashboard"
    android:icon="@drawable/ic_conversation"
    android:title="@string/title_dashboard" />

  <item
      android:id="@+id/navigation_group"
      android:icon="@drawable/ic_neighbor_manage"
      android:title="@string/title_group" />

  <item
      android:id="@+id/navigation_profile"
      android:icon="@drawable/ic_profile"
      android:title="@string/title_profile" />

</menu>
